--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -60,12 +60,12 @@
         "import seaborn as sns\n",
         "\n",
         "# load the dataset\n",
-        "data_book= pd.read_csv('sample_data/best_books_ever.csv')"
+        "df_hour= pd.read_csv('sample_data/hour.csv')"
       ],
       "metadata": {
         "id": "TJ5rhN33TBVV"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
