--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -78,6 +78,112 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Melihat summary dari struktur data hour\n",
+        "df_hour.info()"
+      ],
+      "metadata": {
+        "id": "eFdJVz14XBuH",
+        "outputId": "3447b2df-d974-4841-c4b8-97f9dcdc6b7d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 17379 entries, 0 to 17378\n",
+            "Data columns (total 17 columns):\n",
+            " #   Column      Non-Null Count  Dtype  \n",
+            "---  ------      --------------  -----  \n",
+            " 0   instant     17379 non-null  int64  \n",
+            " 1   dteday      17379 non-null  object \n",
+            " 2   season      17379 non-null  int64  \n",
+            " 3   yr          17379 non-null  int64  \n",
+            " 4   mnth        17379 non-null  int64  \n",
+            " 5   hr          17379 non-null  int64  \n",
+            " 6   holiday     17379 non-null  int64  \n",
+            " 7   weekday     17379 non-null  int64  \n",
+            " 8   workingday  17379 non-null  int64  \n",
+            " 9   weathersit  17379 non-null  int64  \n",
+            " 10  temp        17379 non-null  float64\n",
+            " 11  atemp       17379 non-null  float64\n",
+            " 12  hum         17379 non-null  float64\n",
+            " 13  windspeed   17379 non-null  float64\n",
+            " 14  casual      17379 non-null  int64  \n",
+            " 15  registered  17379 non-null  int64  \n",
+            " 16  cnt         17379 non-null  int64  \n",
+            "dtypes: float64(4), int64(12), object(1)\n",
+            "memory usage: 2.3+ MB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Melihat kolom mana saja yang Numeric\n",
+        "num_col=[]\n",
+        "for col in df_hour.columns:\n",
+        "    if(df_hour[col].dtypes!='object'):\n",
+        "        num_col.append(col)\n",
+        "        #print(f\"There are total {len(num_col)} numerical columns in dataset\")\n",
+        "print(num_col)"
+      ],
+      "metadata": {
+        "id": "UzRC2zkgXMSe",
+        "outputId": "a410ecc9-f090-469d-8050-bd5705e98bc1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['instant', 'season', 'yr', 'mnth', 'hr', 'holiday', 'weekday', 'workingday', 'weathersit', 'temp', 'atemp', 'hum', 'windspeed', 'casual', 'registered', 'cnt']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Melihat kolom mana saja yang Categorical\n",
+        "cat_col=[]\n",
+        "for col in df_hour.columns:\n",
+        "    if(df_hour[col].dtypes=='object'):\n",
+        "        cat_col.append(col)\n",
+        "print(f\"There are total {len(cat_col)} categorical columns in dataset\")\n",
+        "print(cat_col)"
+      ],
+      "metadata": {
+        "id": "y-I6XNSlXTyF",
+        "outputId": "d3ee1d24-716d-47d3-93c0-dddb9c7a7c3e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "There are total 1 categorical columns in dataset\n",
+            "['dteday']\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "sXU2GBYu8DC1"
