--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -84,11 +84,11 @@
         "df_hour.info()"
       ],
       "metadata": {
-        "id": "eFdJVz14XBuH",
-        "outputId": "3447b2df-d974-4841-c4b8-97f9dcdc6b7d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "eFdJVz14XBuH",
+        "outputId": "3447b2df-d974-4841-c4b8-97f9dcdc6b7d"
       },
       "execution_count": 4,
       "outputs": [
@@ -136,11 +136,11 @@
         "print(num_col)"
       ],
       "metadata": {
-        "id": "UzRC2zkgXMSe",
-        "outputId": "a410ecc9-f090-469d-8050-bd5705e98bc1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UzRC2zkgXMSe",
+        "outputId": "a410ecc9-f090-469d-8050-bd5705e98bc1"
       },
       "execution_count": 5,
       "outputs": [
@@ -165,11 +165,11 @@
         "print(cat_col)"
       ],
       "metadata": {
-        "id": "y-I6XNSlXTyF",
-        "outputId": "d3ee1d24-716d-47d3-93c0-dddb9c7a7c3e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "y-I6XNSlXTyF",
+        "outputId": "d3ee1d24-716d-47d3-93c0-dddb9c7a7c3e"
       },
       "execution_count": 6,
       "outputs": [
@@ -252,12 +252,143 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Cek missing value dengan fungsi isnull()\n",
+        "df_hour.isnull().sum()"
+      ],
       "metadata": {
-        "id": "jVnYpprE9Evz"
+        "id": "jVnYpprE9Evz",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 617
+        },
+        "outputId": "3dbee91c-8117-4eab-b149-c4ed75f4ea8e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "instant       0\n",
+              "dteday        0\n",
+              "season        0\n",
+              "yr            0\n",
+              "mnth          0\n",
+              "hr            0\n",
+              "holiday       0\n",
+              "weekday       0\n",
+              "workingday    0\n",
+              "weathersit    0\n",
+              "temp          0\n",
+              "atemp         0\n",
+              "hum           0\n",
+              "windspeed     0\n",
+              "casual        0\n",
+              "registered    0\n",
+              "cnt           0\n",
+              "dtype: int64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>instant</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>dteday</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>season</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>yr</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mnth</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>hr</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>holiday</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>weekday</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>workingday</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>weathersit</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>temp</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>atemp</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>hum</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>windspeed</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>casual</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>registered</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>cnt</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -269,6 +400,33 @@
       "metadata": {
         "id": "Q_5ejIqckiSP"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Mengecek Season atau Musim yang unik\n",
+        "df_hour.season.unique()"
+      ],
+      "metadata": {
+        "id": "A50m7aNPYBPG",
+        "outputId": "afcda838-089c-4de7-d50b-2e2d7927acd9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 2, 3, 4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "markdown",
