--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -65,7 +65,7 @@
       "metadata": {
         "id": "TJ5rhN33TBVV"
       },
-      "execution_count": 3,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -88,9 +88,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eFdJVz14XBuH",
-        "outputId": "3447b2df-d974-4841-c4b8-97f9dcdc6b7d"
+        "outputId": "0ffd2a6f-905c-4e27-f451-7187b61b3d8c"
       },
-      "execution_count": 4,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -408,11 +408,11 @@
         "df_hour.season.unique()"
       ],
       "metadata": {
-        "id": "A50m7aNPYBPG",
-        "outputId": "afcda838-089c-4de7-d50b-2e2d7927acd9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "A50m7aNPYBPG",
+        "outputId": "afcda838-089c-4de7-d50b-2e2d7927acd9"
       },
       "execution_count": 9,
       "outputs": [
@@ -425,6 +425,37 @@
           },
           "metadata": {},
           "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Mengecek Temperatur atau Suhu yang unik\n",
+        "df_hour.temp.unique()"
+      ],
+      "metadata": {
+        "id": "I16xCCUxYvLS",
+        "outputId": "54d92173-1ee2-402b-d5cb-cbf6ba40c0b5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.24, 0.22, 0.2 , 0.32, 0.38, 0.36, 0.42, 0.46, 0.44, 0.4 , 0.34,\n",
+              "       0.3 , 0.26, 0.16, 0.14, 0.18, 0.12, 0.28, 0.1 , 0.08, 0.06, 0.04,\n",
+              "       0.02, 0.52, 0.56, 0.58, 0.6 , 0.48, 0.54, 0.5 , 0.66, 0.64, 0.62,\n",
+              "       0.68, 0.7 , 0.74, 0.76, 0.72, 0.78, 0.82, 0.8 , 0.86, 0.88, 0.9 ,\n",
+              "       0.84, 0.92, 0.94, 0.96, 0.98, 1.  ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
         }
       ]
     },
