--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -57,15 +57,12 @@
         "import matplotlib.pyplot as plt\n",
         "import pandas as pd\n",
         "%matplotlib inline\n",
-        "import seaborn as sns\n",
-        "\n",
-        "# load the dataset\n",
-        "df_hour= pd.read_csv('sample_data/hour.csv')"
+        "import seaborn as sns"
       ],
       "metadata": {
         "id": "TJ5rhN33TBVV"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -75,82 +72,6 @@
       },
       "source": [
         "## Data Wrangling"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Melihat summary dari struktur data hour\n",
-        "df_hour.info()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "eFdJVz14XBuH",
-        "outputId": "0ffd2a6f-905c-4e27-f451-7187b61b3d8c"
-      },
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 17379 entries, 0 to 17378\n",
-            "Data columns (total 17 columns):\n",
-            " #   Column      Non-Null Count  Dtype  \n",
-            "---  ------      --------------  -----  \n",
-            " 0   instant     17379 non-null  int64  \n",
-            " 1   dteday      17379 non-null  object \n",
-            " 2   season      17379 non-null  int64  \n",
-            " 3   yr          17379 non-null  int64  \n",
-            " 4   mnth        17379 non-null  int64  \n",
-            " 5   hr          17379 non-null  int64  \n",
-            " 6   holiday     17379 non-null  int64  \n",
-            " 7   weekday     17379 non-null  int64  \n",
-            " 8   workingday  17379 non-null  int64  \n",
-            " 9   weathersit  17379 non-null  int64  \n",
-            " 10  temp        17379 non-null  float64\n",
-            " 11  atemp       17379 non-null  float64\n",
-            " 12  hum         17379 non-null  float64\n",
-            " 13  windspeed   17379 non-null  float64\n",
-            " 14  casual      17379 non-null  int64  \n",
-            " 15  registered  17379 non-null  int64  \n",
-            " 16  cnt         17379 non-null  int64  \n",
-            "dtypes: float64(4), int64(12), object(1)\n",
-            "memory usage: 2.3+ MB\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Melihat kolom mana saja yang Numeric\n",
-        "num_col=[]\n",
-        "for col in df_hour.columns:\n",
-        "    if(df_hour[col].dtypes!='object'):\n",
-        "        num_col.append(col)\n",
-        "        #print(f\"There are total {len(num_col)} numerical columns in dataset\")\n",
-        "print(num_col)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "UzRC2zkgXMSe",
-        "outputId": "a410ecc9-f090-469d-8050-bd5705e98bc1"
-      },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['instant', 'season', 'yr', 'mnth', 'hr', 'holiday', 'weekday', 'workingday', 'weathersit', 'temp', 'atemp', 'hum', 'windspeed', 'casual', 'registered', 'cnt']\n"
-          ]
-        }
       ]
     },
     {
@@ -171,7 +92,7 @@
         "id": "y-I6XNSlXTyF",
         "outputId": "d3ee1d24-716d-47d3-93c0-dddb9c7a7c3e"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,7 +120,10 @@
         "id": "zjCBk1BI8DC1"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# load the dataset\n",
+        "df_hour= pd.read_csv('sample_data/hour.csv'"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -223,9 +147,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Melihat summary dari struktur data hour\n",
+        "df_hour.info()"
+      ],
       "metadata": {
         "id": "ax-3tEjc9Cj1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Melihat kolom mana saja yang Numeric\n",
+        "num_col=[]\n",
+        "for col in df_hour.columns:\n",
+        "    if(df_hour[col].dtypes!='object'):\n",
+        "        num_col.append(col)\n",
+        "        #print(f\"There are total {len(num_col)} numerical columns in dataset\")\n",
+        "print(num_col)"
+      ],
+      "metadata": {
+        "id": "75lqy18uRpMd"
       },
       "execution_count": null,
       "outputs": []
@@ -264,7 +208,7 @@
         },
         "outputId": "3dbee91c-8117-4eab-b149-c4ed75f4ea8e"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -414,7 +358,7 @@
         "id": "A50m7aNPYBPG",
         "outputId": "afcda838-089c-4de7-d50b-2e2d7927acd9"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -441,7 +385,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
