--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -62,7 +62,7 @@
       "metadata": {
         "id": "TJ5rhN33TBVV"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -85,14 +85,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "zjCBk1BI8DC1"
       },
       "outputs": [],
       "source": [
         "# load the dataset\n",
-        "df_hour= pd.read_csv('sample_data/hour.csv'"
+        "df_hour= pd.read_csv('sample_data/hour.csv')"
       ]
     },
     {
@@ -122,10 +122,45 @@
         "df_hour.info()"
       ],
       "metadata": {
-        "id": "ax-3tEjc9Cj1"
+        "id": "ax-3tEjc9Cj1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f6289ea8-0fdb-4d01-f106-fa72d321bb97"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 17379 entries, 0 to 17378\n",
+            "Data columns (total 17 columns):\n",
+            " #   Column      Non-Null Count  Dtype  \n",
+            "---  ------      --------------  -----  \n",
+            " 0   instant     17379 non-null  int64  \n",
+            " 1   dteday      17379 non-null  object \n",
+            " 2   season      17379 non-null  int64  \n",
+            " 3   yr          17379 non-null  int64  \n",
+            " 4   mnth        17379 non-null  int64  \n",
+            " 5   hr          17379 non-null  int64  \n",
+            " 6   holiday     17379 non-null  int64  \n",
+            " 7   weekday     17379 non-null  int64  \n",
+            " 8   workingday  17379 non-null  int64  \n",
+            " 9   weathersit  17379 non-null  int64  \n",
+            " 10  temp        17379 non-null  float64\n",
+            " 11  atemp       17379 non-null  float64\n",
+            " 12  hum         17379 non-null  float64\n",
+            " 13  windspeed   17379 non-null  float64\n",
+            " 14  casual      17379 non-null  int64  \n",
+            " 15  registered  17379 non-null  int64  \n",
+            " 16  cnt         17379 non-null  int64  \n",
+            "dtypes: float64(4), int64(12), object(1)\n",
+            "memory usage: 2.3+ MB\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -139,10 +174,22 @@
         "print(num_col)"
       ],
       "metadata": {
-        "id": "75lqy18uRpMd"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "75lqy18uRpMd",
+        "outputId": "b640d27a-1b8b-4d16-e5e7-7eaff8758841"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['instant', 'season', 'yr', 'mnth', 'hr', 'holiday', 'weekday', 'workingday', 'weathersit', 'temp', 'atemp', 'hum', 'windspeed', 'casual', 'registered', 'cnt']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -156,10 +203,23 @@
         "print(cat_col)"
       ],
       "metadata": {
-        "id": "2nJtkeqQR3sS"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2nJtkeqQR3sS",
+        "outputId": "07a65513-a98c-455b-af78-224bc57f96ef"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "There are total 1 categorical columns in dataset\n",
+            "['dteday']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -193,9 +253,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 617
         },
-        "outputId": "3dbee91c-8117-4eab-b149-c4ed75f4ea8e"
+        "outputId": "f550da8e-3ae8-4d5f-97ee-0f1587c98ee9"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -317,7 +377,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 11
         }
       ]
     },
