--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -62,7 +62,7 @@
       "metadata": {
         "id": "TJ5rhN33TBVV"
       },
-      "execution_count": 4,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -85,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 26,
       "metadata": {
         "id": "zjCBk1BI8DC1"
       },
@@ -126,9 +126,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f6289ea8-0fdb-4d01-f106-fa72d321bb97"
+        "outputId": "b95366a6-f7d8-4894-e06b-5b86b508a6f2"
       },
-      "execution_count": 8,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,14 +168,15 @@
         "df_hour.describe()"
       ],
       "metadata": {
-        "id": "hLgva_Ii1soB",
-        "outputId": "8c9497ac-722a-4c07-dd3f-a1b2084dabdd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 320
-        }
+        },
+        "collapsed": true,
+        "id": "hLgva_Ii1soB",
+        "outputId": "3fa776bf-e928-4cb3-de29-b72273ae33b3"
       },
-      "execution_count": 19,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -223,7 +224,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b99a7c97-6d2b-4a15-ba7c-fc4d5864f4ff\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-3c8ecefe-0c61-404b-a82c-8be89be5290e\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -419,7 +420,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b99a7c97-6d2b-4a15-ba7c-fc4d5864f4ff')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3c8ecefe-0c61-404b-a82c-8be89be5290e')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -471,12 +472,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-b99a7c97-6d2b-4a15-ba7c-fc4d5864f4ff button.colab-df-convert');\n",
+              "        document.querySelector('#df-3c8ecefe-0c61-404b-a82c-8be89be5290e button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-b99a7c97-6d2b-4a15-ba7c-fc4d5864f4ff');\n",
+              "        const element = document.querySelector('#df-3c8ecefe-0c61-404b-a82c-8be89be5290e');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -496,8 +497,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-3652c485-fc2d-4684-82e4-4497b1843594\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3652c485-fc2d-4684-82e4-4497b1843594')\"\n",
+              "<div id=\"df-d9a10f93-f594-435a-b490-9fecf9ea2bfa\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d9a10f93-f594-435a-b490-9fecf9ea2bfa')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -616,7 +617,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-3652c485-fc2d-4684-82e4-4497b1843594 button');\n",
+              "        document.querySelector('#df-d9a10f93-f594-435a-b490-9fecf9ea2bfa button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -632,7 +633,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 28
         }
       ]
     },
@@ -652,9 +653,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "75lqy18uRpMd",
-        "outputId": "b640d27a-1b8b-4d16-e5e7-7eaff8758841"
+        "outputId": "8b2e70af-654a-4c26-fb7c-102d45c2ec17"
       },
-      "execution_count": 9,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -681,9 +682,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2nJtkeqQR3sS",
-        "outputId": "07a65513-a98c-455b-af78-224bc57f96ef"
+        "outputId": "1ea761d5-ab38-47bc-e24d-3360c7c87e7c"
       },
-      "execution_count": 10,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -727,9 +728,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 617
         },
-        "outputId": "f550da8e-3ae8-4d5f-97ee-0f1587c98ee9"
+        "outputId": "235e7a6d-7076-49c2-e626-57b7ad2281d9"
       },
-      "execution_count": 11,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -851,7 +852,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 31
         }
       ]
     },
@@ -866,9 +867,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wN_OTsesSwVX",
-        "outputId": "d730811a-dfba-4570-e7b1-b1882bd921b7"
+        "outputId": "7198cf0f-1646-4a81-8054-8b080d7da0f6"
       },
-      "execution_count": 13,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -878,47 +879,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Check outlier menggunakan IQR method\n",
-        "\n",
-        "q25, q75 = np.percentile(df_hour, 25), np.percentile(df_hour, 75)\n",
-        "iqr = q75 - q25\n",
-        "cut_off = iqr * 1.5\n",
-        "minimum, maximum = q25 - cut_off, q75 + cut_off\n",
-        "\n",
-        "outliers = [x for x in data if x < minimum or x > maximum]"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 356
-        },
-        "id": "ZtEJJWh2S3iD",
-        "outputId": "cf95f7e7-824b-490a-fcb6-3e5b32031bb6"
-      },
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "'<' not supported between instances of 'str' and 'int'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-18-595ed43f5273>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Check outlier menggunakan IQR method\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mq25\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq75\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpercentile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_hour\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m25\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpercentile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_hour\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m75\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0miqr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mq75\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mq25\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mcut_off\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0miqr\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m1.5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/numpy/lib/function_base.py\u001b[0m in \u001b[0;36mpercentile\u001b[0;34m(a, q, axis, out, overwrite_input, method, keepdims, interpolation)\u001b[0m\n\u001b[1;32m   4281\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0m_quantile_is_valid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4282\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Percentiles must be in the range [0, 100]\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4283\u001b[0;31m     return _quantile_unchecked(\n\u001b[0m\u001b[1;32m   4284\u001b[0m         a, q, axis, out, overwrite_input, method, keepdims)\n\u001b[1;32m   4285\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/numpy/lib/function_base.py\u001b[0m in \u001b[0;36m_quantile_unchecked\u001b[0;34m(a, q, axis, out, overwrite_input, method, keepdims)\u001b[0m\n\u001b[1;32m   4553\u001b[0m                         keepdims=False):\n\u001b[1;32m   4554\u001b[0m     \u001b[0;34m\"\"\"Assumes that q is in [0, 1], and is an ndarray\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4555\u001b[0;31m     return _ureduce(a,\n\u001b[0m\u001b[1;32m   4556\u001b[0m                     \u001b[0mfunc\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0m_quantile_ureduce_func\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4557\u001b[0m                     \u001b[0mq\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mq\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/numpy/lib/function_base.py\u001b[0m in \u001b[0;36m_ureduce\u001b[0;34m(a, func, keepdims, **kwargs)\u001b[0m\n\u001b[1;32m   3821\u001b[0m                 \u001b[0mkwargs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'out'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mEllipsis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mindex_out\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3822\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3823\u001b[0;31m     \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3824\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3825\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mout\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/numpy/lib/function_base.py\u001b[0m in \u001b[0;36m_quantile_ureduce_func\u001b[0;34m(a, q, axis, out, overwrite_input, method)\u001b[0m\n\u001b[1;32m   4720\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4721\u001b[0m             \u001b[0marr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4722\u001b[0;31m     result = _quantile(arr,\n\u001b[0m\u001b[1;32m   4723\u001b[0m                        \u001b[0mquantiles\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mq\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4724\u001b[0m                        \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/numpy/lib/function_base.py\u001b[0m in \u001b[0;36m_quantile\u001b[0;34m(arr, quantiles, axis, method, out)\u001b[0m\n\u001b[1;32m   4822\u001b[0m                                                       values_count)\n\u001b[1;32m   4823\u001b[0m         \u001b[0;31m# --- Sorting\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4824\u001b[0;31m         arr.partition(\n\u001b[0m\u001b[1;32m   4825\u001b[0m             np.unique(np.concatenate(([0, -1],\n\u001b[1;32m   4826\u001b[0m                                       \u001b[0mprevious_indexes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: '<' not supported between instances of 'str' and 'int'"
-          ]
+          "execution_count": 32
         }
       ]
     },
